--- a/images-api/package.json
+++ b/images-api/package.json
@@ -21,6 +21,7 @@
     "pg": "^6.2.4",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "express": "^4.15.3"
   }
 }
