--- a/images-web/package.json
+++ b/images-web/package.json
@@ -23,7 +23,10 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "zone.js": "^0.8.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.26",
+    "angular2-jwt": "^0.2.3",
+    "bootstrap": "^4.0.0-alpha.6"
   },
   "devDependencies": {
     "@angular/cli": "1.1.3",
